// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography inherit size render 1`] = `
<div>
  <div
    class="flex-1 box-border [&_*]:font-sans [&_*]:[box-sizing:inherit] [&_*::before]:[box-sizing:inherit] [&_*::after]:[box-sizing:inherit]"
  >
    <style>
      html {
  box-sizing: initial;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
*,
*::before,
*::after {
  box-sizing: inherit;
}
body {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  margin: 0;
  background-color: #fff;
}
@media print {
  body {
    background-color: #fff;
  }
}
#root {
  display: flex;
  flex: 1;
}

    </style>
    <p
      class="m-0 font-inherit leading-[1.5em] text-graphite font-regular"
    >
      Inherit font size
    </p>
  </div>
</div>
`;

exports[`Typography renders 1`] = `
<div>
  <div
    class="flex-1 box-border [&_*]:font-sans [&_*]:[box-sizing:inherit] [&_*::before]:[box-sizing:inherit] [&_*::after]:[box-sizing:inherit]"
  >
    <style>
      html {
  box-sizing: initial;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
*,
*::before,
*::after {
  box-sizing: inherit;
}
body {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  margin: 0;
  background-color: #fff;
}
@media print {
  body {
    background-color: #fff;
  }
}
#root {
  display: flex;
  flex: 1;
}

    </style>
    <p
      class="m-0 font-inherit leading-[1.5em] text-graphite font-regular"
    >
      Just Typography
    </p>
  </div>
</div>
`;

exports[`Typography variant heading small render 1`] = `
<div>
  <div
    class="flex-1 box-border [&_*]:font-sans [&_*]:[box-sizing:inherit] [&_*::before]:[box-sizing:inherit] [&_*::after]:[box-sizing:inherit]"
  >
    <style>
      html {
  box-sizing: initial;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
*,
*::before,
*::after {
  box-sizing: inherit;
}
body {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  margin: 0;
  background-color: #fff;
}
@media print {
  body {
    background-color: #fff;
  }
}
#root {
  display: flex;
  flex: 1;
}

    </style>
    <h4
      class="m-0 text-md text-black font-semibold"
    >
      Heading small
    </h4>
  </div>
</div>
`;
